--- a/css/example-1.css
+++ b/css/example-1.css
@@ -392,6 +392,12 @@ hr {clear:both;margin:0;border:0;}
 .footer .wrapper .snswrap ul li {
     float:left;
     padding-left:10px;
+    opacity: 0.5;
+}
+.footer .wrapper .snswrap ul li:hover {
+    float:left;
+    padding-left:10px;
+    opacity: 1;
 }
 
 
