--- a/css/collection.css
+++ b/css/collection.css
@@ -170,3 +170,15 @@ hr {clear:both;margin:0;border:0;}
     float:left;
     padding-left:10px;
 }
+
+
+.footer .wrapper .snswrap ul li {
+    float:left;
+    padding-left:10px;
+    opacity: 0.5;
+}
+.footer .wrapper .snswrap ul li:hover {
+    float:left;
+    padding-left:10px;
+    opacity: 1;
+}
